adding stock price movement

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -283,23 +283,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['AXTG', 'CERPQ', 'WNRS', 'DPLN', 'SOL', 'GYST', 'TTCM', 'SEAC',\n",
-       "       'EEENF'], dtype=object)"
+       "10076"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_tweets[\"Stock\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "\n",
+    "for stockname in df_tweets[\"Stock\"]:\n",
+    "    if stockname not in d:\n",
+    "        d[stockname] = 0\n",
+    "    d[stockname] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AXTG': 23,\n",
+       " 'CERPQ': 348,\n",
+       " 'WNRS': 132,\n",
+       " 'DPLN': 103,\n",
+       " 'SOL': 1674,\n",
+       " 'GYST': 1094,\n",
+       " 'TTCM': 518,\n",
+       " 'SEAC': 560,\n",
+       " 'EEENF': 5624}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
    ]
   },
   {
