--- a/network_analysis.ipynb
+++ b/network_analysis.ipynb
@@ -725,12 +725,118 @@
    "execution_count": 52
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-28T16:59:17.173974Z",
+     "start_time": "2025-03-28T16:59:17.166255Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "\n",
+    "def analyze_pumper_network(graph, pumper_data):\n",
+    "    \"\"\"\n",
+    "    Analyzes the pumper network graph and calculates relevant metrics.\n",
+    "\n",
+    "    Args:\n",
+    "        graph: The networkx graph.\n",
+    "        pumper_data: pandas Series or dictionary mapping node names to boolean values indicating pumper status.\n",
+    "\n",
+    "    Returns:\n",
+    "        A dictionary containing the calculated metrics.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    metrics = {}\n",
+    "\n",
+    "    # 1. Centrality Measures\n",
+    "    degree_centrality = nx.degree_centrality(graph)\n",
+    "    betweenness_centrality = nx.betweenness_centrality(graph)\n",
+    "    eigenvector_centrality = nx.eigenvector_centrality(graph, max_iter=500)\n",
+    "\n",
+    "    metrics['degree_centrality'] = degree_centrality\n",
+    "    metrics['betweenness_centrality'] = betweenness_centrality\n",
+    "    metrics['eigenvector_centrality'] = eigenvector_centrality\n",
+    "\n",
+    "    # 2. Community Detection (Louvain Algorithm)\n",
+    "    try:\n",
+    "        import community as community_louvain\n",
+    "        partition = community_louvain.best_partition(graph)\n",
+    "        metrics['communities'] = partition\n",
+    "    except ImportError:\n",
+    "        print(\"Community library not found. Install it with: pip install python-louvain\")\n",
+    "        metrics['communities'] = None\n",
+    "\n",
+    "    # 3. Graph Density and Transitivity\n",
+    "    metrics['density'] = nx.density(graph)\n",
+    "    try:\n",
+    "        metrics['transitivity'] = nx.transitivity(graph)\n",
+    "    except:\n",
+    "        metrics['transitivity'] = None\n",
+    "\n",
+    "    # 4. Path Analysis (Example: Shortest Paths between Pumpers)\n",
+    "    pumper_nodes = [node for node, is_pumper in pumper_data.items() if is_pumper]\n",
+    "    shortest_paths = {}\n",
+    "    for pumper1 in pumper_nodes:\n",
+    "        for pumper2 in pumper_nodes:\n",
+    "            if pumper1 != pumper2:\n",
+    "                try:\n",
+    "                    shortest_paths[(pumper1, pumper2)] = nx.shortest_path(graph, pumper1, pumper2)\n",
+    "                except nx.NetworkXNoPath:\n",
+    "                    shortest_paths[(pumper1, pumper2)] = None\n",
+    "    metrics['shortest_paths'] = shortest_paths\n",
+    "\n",
+    "    return metrics\n",
+    "\n",
+    "# Example usage (replace with your actual graph and pumper data):\n",
+    "edge_list = pd.DataFrame({\n",
+    "    'Source': ['PumperA', 'PumperA', 'PumperB', 'PumperC', 'PumperD', 'PumperE', 'PumperF', 'PumperG'],\n",
+    "    'Target': ['PumperB', 'PumperC', 'PumperD', 'PumperA', 'PumperC', 'PumperA', 'PumperA', 'PumperF'],\n",
+    "})\n",
+    "\n",
+    "G = nx.from_pandas_edgelist(edge_list, source='Source', target='Target')\n",
+    "\n",
+    "pumper_data = pd.Series({\n",
+    "    'PumperA': True,\n",
+    "    'PumperC': True,\n",
+    "    'PumperE': True,\n",
+    "    'PumperF': True,\n",
+    "    'PumperB': False,\n",
+    "    'PumperD': False,\n",
+    "    'PumperG': False,\n",
+    "})\n",
+    "\n",
+    "results = analyze_pumper_network(G, pumper_data)\n",
+    "\n",
+    "# Save the results to a JSON file\n",
+    "filename = \"pumper_network_analysis_results.pkl\"\n",
+    "\n",
+    "with open(filename, 'wb') as f:\n",
+    "    pickle.dump(results, f)  # indent=4 for pretty printing\n",
+    "\n",
+    "print(f\"Results saved to {filename}\")"
+   ],
+   "id": "63b4e9cf6e6aa92f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results saved to pumper_network_analysis_results.pkl\n"
+     ]
+    }
+   ],
+   "execution_count": 62
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "63b4e9cf6e6aa92f"
+   "id": "8901245b48fb56e9"
   }
  ],
  "metadata": {
