--- a/text_analysis.ipynb
+++ b/text_analysis.ipynb
@@ -217,24 +217,19 @@
     "    X_train = pd.concat([X_train.drop(text_column, axis=1), train_tfidf_df], axis=1)\n",
     "    X_test = pd.concat([X_test.drop(text_column, axis=1), test_tfidf_df], axis=1)\n",
     "\n",
-    "    if oversampling:\n",
-    "        smote = SMOTE(random_state=42)\n",
-    "        X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
-    "    else:\n",
-    "        X_train_resampled, y_train_resampled = X_train, y_train\n",
     "\n",
     "    tfidf_columns = [col for col in X_train.columns if col not in numerical_columns and col != 'hashtag_count' and col != 'emoji_count']\n",
     "\n",
     "    # Feature selection\n",
     "    feature_selector = SelectKBest(chi2, k=min(200, len(tfidf_columns))) #added feature selection\n",
-    "    X_train_selected = feature_selector.fit_transform(X_train_resampled[tfidf_columns], y_train_resampled)\n",
+    "    X_train_selected = feature_selector.fit_transform(X_train[tfidf_columns], y_train)\n",
     "    X_test_selected = feature_selector.transform(X_test[tfidf_columns])\n",
     "\n",
     "    selected_tfidf_columns = [tfidf_columns[i] for i in feature_selector.get_support(indices=True)]\n",
     "    X_train_selected_df = pd.DataFrame(X_train_selected, columns=selected_tfidf_columns)\n",
     "    X_test_selected_df = pd.DataFrame(X_test_selected, columns=selected_tfidf_columns)\n",
     "\n",
-    "    X_train_final = pd.concat([X_train_resampled[numerical_columns].reset_index(drop=True), X_train_selected_df.reset_index(drop=True)], axis=1)\n",
+    "    X_train_final = pd.concat([X_train[numerical_columns].reset_index(drop=True), X_train_selected_df.reset_index(drop=True)], axis=1)\n",
     "    X_test_final = pd.concat([X_test[numerical_columns].reset_index(drop=True), X_test_selected_df.reset_index(drop=True)], axis=1)\n",
     "\n",
     "    preprocessor = ColumnTransformer(\n",
@@ -252,22 +247,22 @@
     "\n",
     "    if param_grid is not None:\n",
     "        grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='f1', verbose=2, n_jobs=3)\n",
-    "        grid_search.fit(X_train_final, y_train_resampled)\n",
+    "        grid_search.fit(X_train_final, y_train)\n",
     "        pipeline = grid_search.best_estimator_\n",
     "\n",
     "    else:\n",
-    "        pipeline.fit(X_train_final, y_train_resampled)\n",
+    "        pipeline.fit(X_train_final, y_train)\n",
     "\n",
     "    y_train_pred = pipeline.predict(X_train_final)\n",
     "    y_test_pred = pipeline.predict(X_test_final)\n",
     "\n",
     "    train_metrics = {\n",
-    "        'accuracy': accuracy_score(y_train_resampled, y_train_pred),\n",
-    "        'precision': precision_score(y_train_resampled, y_train_pred),\n",
-    "        'recall': recall_score(y_train_resampled, y_train_pred),\n",
-    "        'f1': f1_score(y_train_resampled, y_train_pred),\n",
-    "        'roc_auc': roc_auc_score(y_train_resampled, pipeline.predict_proba(X_train_final)[:, 1]),\n",
-    "        'confusion_matrix': confusion_matrix(y_train_resampled, y_train_pred)\n",
+    "        'accuracy': accuracy_score(y_train, y_train_pred),\n",
+    "        'precision': precision_score(y_train, y_train_pred),\n",
+    "        'recall': recall_score(y_train, y_train_pred),\n",
+    "        'f1': f1_score(y_train, y_train_pred),\n",
+    "        'roc_auc': roc_auc_score(y_train, pipeline.predict_proba(X_train_final)[:, 1]),\n",
+    "        'confusion_matrix': confusion_matrix(y_train, y_train_pred)\n",
     "    }\n",
     "\n",
     "    test_metrics = {\n",
