Created a csv file, flagged_tweets.csv, tweets that have been flagged during testing. Pushed random_forest_classification_pipeline.joblib and random_forest_classification_vectorizer.joblib, models that i used

--- a/New Approach/Creating_probabilistic_pumper.ipynb
+++ b/New Approach/Creating_probabilistic_pumper.ipynb
@@ -1411,8 +1411,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-13T10:49:22.969558Z",
-     "start_time": "2025-04-13T10:49:22.420786Z"
+     "end_time": "2025-04-14T04:51:16.854321Z",
+     "start_time": "2025-04-14T04:51:15.691211Z"
     }
    },
    "cell_type": "code",
@@ -1437,6 +1437,115 @@
    "id": "eb0b96e8020abbe1",
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:52:07.321653Z",
+     "start_time": "2025-04-14T04:52:07.312139Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "X_test",
+   "id": "fd17052676dbd477",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                                   text\n",
+       "2782  RT @Kelvin_OTC: $GYST Ready for a big move. 10...\n",
+       "2267   when moon sir #BTC  $SOL https://t.co/TyyKiBF1KU\n",
+       "1234  RT @CryptoCrunchApp: Checkout Top 10 #trending...\n",
+       "9372  @anti_warhawk If you lost money on $EEENF it i...\n",
+       "4551  RT @LarryCl00061125: $EEENF added to my positi...\n",
+       "...                                                 ...\n",
+       "5699  Lotzzzz of red   yuck  but we #OTCStock fans h...\n",
+       "1515  RT @saamon2500: Thanks to 7,000 followers $SOL...\n",
+       "7349  $EEENF $VPER $PHIL Immenient parabolic move. $...\n",
+       "3145  LOL why are people saying this market suckssee...\n",
+       "9059  RT @cdntradegrljenn: $EEENF people just need t...\n",
+       "\n",
+       "[2016 rows x 1 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2782</th>\n",
+       "      <td>RT @Kelvin_OTC: $GYST Ready for a big move. 10...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2267</th>\n",
+       "      <td>when moon sir #BTC  $SOL https://t.co/TyyKiBF1KU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1234</th>\n",
+       "      <td>RT @CryptoCrunchApp: Checkout Top 10 #trending...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9372</th>\n",
+       "      <td>@anti_warhawk If you lost money on $EEENF it i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4551</th>\n",
+       "      <td>RT @LarryCl00061125: $EEENF added to my positi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5699</th>\n",
+       "      <td>Lotzzzz of red   yuck  but we #OTCStock fans h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1515</th>\n",
+       "      <td>RT @saamon2500: Thanks to 7,000 followers $SOL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7349</th>\n",
+       "      <td>$EEENF $VPER $PHIL Immenient parabolic move. $...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3145</th>\n",
+       "      <td>LOL why are people saying this market suckssee...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9059</th>\n",
+       "      <td>RT @cdntradegrljenn: $EEENF people just need t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2016 rows × 1 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -1872,11 +1981,109 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "Using RandomForest",
+   "id": "4cace4333bf14c5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:54:28.825721Z",
+     "start_time": "2025-04-14T04:54:27.917541Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "model = PumpDetection(r\"model/random_forest_classification_pipeline.joblib\", r\"model/random_forest_classification_vectorizer.joblib\")",
+   "id": "3b1e3b5d5a01f144",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:55:32.783965Z",
+     "start_time": "2025-04-14T04:54:59.618217Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "y_pred = model.predict(X_test[\"text\"])",
+   "id": "1a135aefcc827fc4",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:56:13.973162Z",
+     "start_time": "2025-04-14T04:56:13.969849Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "X_test[\"prediction\"] = y_pred",
+   "id": "10ef0394e8e889eb",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:56:31.431184Z",
+     "start_time": "2025-04-14T04:56:31.425682Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "X_test[X_test[\"prediction\"] == 1].index",
+   "id": "d633c70fa8a6ac12",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([2782, 9372, 4551, 8624, 7756, 5549, 7783,  604, 6082, 8384,\n",
+       "       ...\n",
+       "        488, 8672, 3135, 9371, 6658, 7000, 4077, 5699, 7349, 3145],\n",
+       "      dtype='int64', length=750)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:57:34.115651Z",
+     "start_time": "2025-04-14T04:57:34.111302Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "flagged_tweets_df = data.loc[X_test[X_test[\"prediction\"] == 1].index]",
+   "id": "e6cca5e3c2433aee",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T04:58:00.019976Z",
+     "start_time": "2025-04-14T04:58:00.009352Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "flagged_tweets_df.to_csv(r\"../data/flagged_tweets.csv\", index=False)",
+   "id": "3b1a0e6678b5b8d5",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "3b1e3b5d5a01f144"
+   "id": "7c565f121adaedd6"
   }
  ],
  "metadata": {
