Included index in csv files

--- a/New Approach/Creating_probabilistic_pumper.ipynb
+++ b/New Approach/Creating_probabilistic_pumper.ipynb
@@ -2067,15 +2067,87 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T04:58:00.019976Z",
-     "start_time": "2025-04-14T04:58:00.009352Z"
+     "end_time": "2025-04-14T05:20:28.133377Z",
+     "start_time": "2025-04-14T05:20:28.124896Z"
     }
    },
    "cell_type": "code",
-   "source": "flagged_tweets_df.to_csv(r\"../data/flagged_tweets.csv\", index=False)",
+   "source": "flagged_tweets_df.to_csv(r\"../data/flagged_tweets.csv\")",
    "id": "3b1a0e6678b5b8d5",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T05:00:39.625318Z",
+     "start_time": "2025-04-14T05:00:39.621231Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "flagged_tweets_df.shape",
+   "id": "7c565f121adaedd6",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(750, 16)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T05:01:17.587452Z",
+     "start_time": "2025-04-14T05:01:17.584040Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "X_test.shape",
+   "id": "b687c94cdd88bd23",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2016, 2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-14T05:02:04.028786Z",
+     "start_time": "2025-04-14T05:02:04.024907Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data.shape",
+   "id": "1387414db15341eb",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10076, 16)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -2083,7 +2155,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "7c565f121adaedd6"
+   "id": "15b9f4483738b2d5"
   }
  ],
  "metadata": {
