remove invalid lines

--- a/model_validation/network_analysis_model_validation.ipynb
+++ b/model_validation/network_analysis_model_validation.ipynb
@@ -547,15 +547,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_true = flagged_data[\"Known_Pumper\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -613,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,23 +625,9 @@
     "  filtered_df = df[df[username_column_name].isin(usernames_list)]\n",
     "  return filtered_df\n",
     "\n",
-    "def keep_unique_usernames(df, username_column_name):\n",
-    "  \"\"\"\n",
-    "  Filters a DataFrame to keep only the first row for each unique username.\n",
     "\n",
-    "  Args:\n",
-    "    df: The pandas DataFrame to filter.\n",
-    "    username_column_name: The name of the column containing usernames.\n",
     "\n",
-    "  Returns:\n",
-    "    A filtered pandas DataFrame with unique usernames.\n",
-    "  \"\"\"\n",
-    "\n",
-    "  unique_df = df.drop_duplicates(subset=username_column_name, keep='first')\n",
-    "  return unique_df\n",
-    "\n",
-    "filtered_dataframe_by_username = filter_dataframe_by_usernames(full_data,flagged_usernames,\"user.screen_name\")\n",
-    "unique_filtered_dataframe_by_username = keep_unique_usernames(filtered_dataframe_by_username,\"user.screen_name\")"
+    "filtered_dataframe_by_username = filter_dataframe_by_usernames(full_data,flagged_usernames,\"user.screen_name\")"
    ]
   },
   {
