Created Flask Endpoint and git reshuffling

--- a/text_model_evaluation.ipynb
+++ b/text_model_evaluation.ipynb
@@ -11,10 +11,8 @@
     }
    },
    "source": [
-    "from tf_idf_new import PumpDetection\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import re"
+    "from codebase.text_analysis import PumpDetection\n",
+    "import pandas as pd"
    ],
    "outputs": [],
    "execution_count": 1
