--- a/text_model_training.ipynb
+++ b/text_model_training.ipynb
@@ -18,10 +18,7 @@
    },
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import re"
+    "import pandas as pd"
    ],
    "outputs": [],
    "execution_count": 15
@@ -59,7 +56,7 @@
    "cell_type": "code",
    "source": [
     "import networkx as nx\n",
-    "import re\n",
+    "\n",
     "\n",
     "def extract_mentions(text):\n",
     "    if isinstance(text, str):\n",
@@ -299,7 +296,6 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "# Modified User Probability Calculation\n",
     "node_features = []\n",
@@ -690,8 +686,6 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "import re\n",
-    "import emoji\n",
     "\n",
     "twitter_data = pd.read_csv(r\"../data/scored_tweets_with_probabilities.csv\")\n",
     "\n",
@@ -754,9 +748,7 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
-    "import re\n",
-    "import emoji\n",
+    "\n",
     "from deep_translator import GoogleTranslator\n",
     "from langdetect import detect\n",
     "\n",
@@ -1010,19 +1002,9 @@
    },
    "cell_type": "code",
    "source": [
-    "import pandas as pd\n",
-    "import re\n",
-    "import emoji\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
-    "from sklearn.preprocessing import MaxAbsScaler\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.decomposition import PCA\n",
-    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "\n",
     "\n",
     "def preprocess_text(text):\n",
     "    text = re.sub(r'http\\S+', '', text)\n",
@@ -1161,9 +1143,7 @@
    },
    "cell_type": "code",
    "source": [
-    "import joblib\n",
-    "import json\n",
-    "import os\n",
+    "\n",
     "\n",
     "def train_and_save_model(df, model, pipeline_filename, vectorizer_filename, model_name, param_grid=None):\n",
     "    \"\"\"\n",
@@ -1275,7 +1255,7 @@
    },
    "cell_type": "code",
    "source": [
-    "import json\n",
+    "\n",
     "import os\n",
     "for model_name, model_info in model_data.items():\n",
     "    print(f\"Training {model_name}...\")\n",
@@ -1319,7 +1299,6 @@
     "from sklearn.ensemble import GradientBoostingClassifier, RandomForestClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier\n",
-    "import scipy.stats\n",
     "\n",
     "model_data = {\n",
     "    \"random_forest_2\": {\n",
@@ -1418,7 +1397,6 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "from tf_idf_new import PumpDetection\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "data = pd.read_csv(r\"C:\\Users\\limti\\PycharmProjects\\DSA4263_StockTweets\\data\\scored_tweets_final_translated.csv\")\n",
@@ -1725,8 +1703,7 @@
    },
    "cell_type": "code",
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "\n",
     "def analyze_model_metrics(json_data):\n",
     "    \"\"\"\n",
     "    Analyzes model metrics from a JSON file and generates visualizations.\n",
@@ -1894,8 +1871,6 @@
     "        \"vectorizer_filename\": r\"model/lightgbm_classification_vectorizer.joblib\"\n",
     "    }\n",
     "}\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
     "\n",
@@ -2068,7 +2043,6 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "from tf_idf_new import PumpDetection\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "data = pd.read_csv(r\"C:\\Users\\limti\\PycharmProjects\\DSA4263_StockTweets\\data\\scored_tweets_final_translated.csv\")\n",
@@ -2288,17 +2262,12 @@
     "import pandas as pd\n",
     "import re\n",
     "import emoji\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MaxAbsScaler\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.decomposition import PCA\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "import joblib\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.utils.class_weight import compute_sample_weight\n",
@@ -2713,7 +2682,7 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "from tf_idf_new import PumpDetection\n",
+    "from codebase.text_analysis import PumpDetection\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "data = pd.read_csv(r\"C:\\Users\\limti\\PycharmProjects\\DSA4263_StockTweets\\data\\scored_tweets_final_translated.csv\")\n",
